<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="@dimen/title_text"
        android:layout_marginTop="@dimen/margin_title"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_input"
        android:hint="@string/input_hint"
        android:textSize="@dimen/input_text"
        android:inputType="number"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_app" />

    <TextView
        android:id="@+id/counter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_counter"
        android:text="@string/counter_initial_value"
        android:textSize="@dimen/counter_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_value" />

    <Button
        android:id="@+id/increase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/counter_value"
        android:layout_marginTop="@dimen/margin_top_buttons"
        android:layout_marginStart="@dimen/margin_start_end_buttons"
        android:text="@string/increase_button_text"
        android:textSize="@dimen/button_text"
        android:textColor="@color/black"
        android:backgroundTint="@color/green" />

    <Button
        android:id="@+id/decrease_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_buttons"
        android:layout_marginEnd="@dimen/margin_start_end_buttons"
        android:text="@string/decrease_button_text"
        android:textSize="@dimen/button_text"
        android:backgroundTint="@color/red"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/counter_value" />

 <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_reset"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        android:text="@string/reset_button_text"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/counter_value" />




</androidx.constraintlayout.widget.ConstraintLayout>